tests/ui/masterror/fail/enum_missing_variant.stderr
error: all variants must use #[masterror(...)] to derive masterror::Error conversion
 --> tests/ui/masterror/fail/enum_missing_variant.rs:8:5
  |
8 | /     #[error("missing")]
9 | |     Missing
  | |___________^

warning: unused imports: `AppCode` and `AppErrorKind`
 --> tests/ui/masterror/fail/enum_missing_variant.rs:1:17
  |
1 | use masterror::{AppCode, AppErrorKind, Masterror};
  |                 ^^^^^^^  ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
